unpackaged/main/default/objects/POS_Static_Resource__mdt/POS_Static_Resource__mdt.object-meta.xml
<CustomObject>
    <description>This setting applies to the Single Barrel Program and defines the data for displaying an image</description>
    <label>POS Static Resource</label>
    <pluralLabel>POS Static Resources</pluralLabel>
</CustomObject>