unpackaged/main/default/objects/POS_Static_Resource__mdt/fields/Item_Text__c.field-meta.xml
<CustomField>
    <fullName>Item_Text__c</fullName>
    <description>The name of the item that is displayed on the POS Customizations screen if there needs to be text specific to the brand being displayed.</description>
    <label>Item Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>