unpackaged/main/default/objects/POS_Static_Resource__mdt/fields/POS_Item__c.field-meta.xml
<CustomField>
    <fullName>POS_Item__c</fullName>
    <description>Link to the name of the item and any help text associated with it</description>
    <label>POS Item</label>
    <referenceTo>POS_Item__mdt</referenceTo>
    <relationshipLabel>POS Static Resources</relationshipLabel>
    <relationshipName>POS_Static_Resources</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>