unpackaged/main/default/objects/POS_Static_Resource__mdt/fields/Static_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Static_Resource_Name__c</fullName>
    <description>The name of the static resource where we will get the image from</description>
    <label>Static Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>